Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1.24
-
Fix Version/s: 10.1.24
-
Component/s: Data Definition - Alter Table, Encryption, Tests
-
Labels:None
Description
encryption.innodb_onlinealter_encryption 'cbc,innodb_plugin' w2 [ fail ] Found warnings/errors in server log file!
|
Test ended at 2017-05-26 10:00:21
|
|
==15231== Thread 26:
|
==15231== Syscall param pwrite64(buf) points to uninitialised byte(s)
|
==15231== at 0x4E433E3: ??? (in /lib64/libpthread-2.18.so)
|
==15231== by 0xC288FBE: os_file_pwrite(int, void const*, unsigned long, unsigned long) (os0file.cc:2708)
|
==15231== by 0xC28930E: os_file_write_func(char const*, int, void const*, unsigned long, unsigned long) (os0file.cc:3166)
|
==15231== by 0xC2F91F0: pfs_os_file_write_int_fd_func(char const*, int, void const*, unsigned long, unsigned long, char const*, unsigned long) (os0file.ic:411)
|
==15231== by 0xC300990: row_merge_write(int, unsigned long, void const*, fil_space_crypt_t*, void*, unsigned long) (row0merge.cc:1019)
|
==15231== by 0xC3030BF: row_merge_read_clustered_index(trx_t*, TABLE*, dict_table_t const*, dict_table_t const*, bool, dict_index_t**, dict_index_t*, fts_psort_t*, merge_file_t*, unsigned long const*, unsigned long, dtuple_t const*, unsigned long const*, unsigned long, ib_sequence_t&, unsigned char*, int*, float, fil_space_crypt_t*, unsigned char*) (row0merge.cc:2006)
|
==15231== by 0xC308172: row_merge_build_indexes(trx_t*, dict_table_t*, dict_table_t*, bool, dict_index_t**, unsigned long const*, unsigned long, TABLE*, dtuple_t const*, unsigned long const*, unsigned long, ib_sequence_t&) (row0merge.cc:4106)
|
==15231== by 0xC222D0E: ha_innodb::inplace_alter_table(TABLE*, Alter_inplace_info*) (handler0alter.cc:4249)
|
==15231== by 0x6E9918: handler::ha_inplace_alter_table(TABLE*, Alter_inplace_info*) (handler.h:3704)
|
==15231== by 0x6E1A77: mysql_inplace_alter_table(THD*, TABLE_LIST*, TABLE*, TABLE*, Alter_inplace_info*, enum_alter_inplace_result, MDL_request*, Alter_table_ctx*) (sql_table.cc:7149)
|
==15231== by 0x6E6322: mysql_alter_table(THD*, char*, char*, HA_CREATE_INFO*, TABLE_LIST*, Alter_info*, unsigned int, st_order*, bool) (sql_table.cc:8963)
|
==15231== by 0x75B98D: Sql_cmd_alter_table::execute(THD*) (sql_alter.cc:325)
|
==15231== Address 0x19347000 is in a rw- anonymous segment
|
^ Found warnings in /mnt/data/buildot/maria-slave/work-opensuse-amd64/build/mysql-test/var/2/log/mysqld.1.err
|
encryption.innodb-bad-key-change 'cbc,innodb_plugin' w4 [ fail ] Found warnings/errors in server log file!
|
Test ended at 2017-05-26 10:11:02
|
line
|
==16217== Thread 22:
|
==16217== Syscall param pwrite64(buf) points to uninitialised byte(s)
|
==16217== at 0x4E433E3: ??? (in /lib64/libpthread-2.18.so)
|
==16217== by 0xC07EFBE: os_file_pwrite(int, void const*, unsigned long, unsigned long) (os0file.cc:2708)
|
==16217== by 0xC07F30E: os_file_write_func(char const*, int, void const*, unsigned long, unsigned long) (os0file.cc:3166)
|
==16217== by 0xC0EF1F0: pfs_os_file_write_int_fd_func(char const*, int, void const*, unsigned long, unsigned long, char const*, unsigned long) (os0file.ic:411)
|
==16217== by 0xC0F6990: row_merge_write(int, unsigned long, void const*, fil_space_crypt_t*, void*, unsigned long) (row0merge.cc:1019)
|
==16217== by 0xC0F90BF: row_merge_read_clustered_index(trx_t*, TABLE*, dict_table_t const*, dict_table_t const*, bool, dict_index_t**, dict_index_t*, fts_psort_t*, merge_file_t*, unsigned long const*, unsigned long, dtuple_t const*, unsigned long const*, unsigned long, ib_sequence_t&, unsigned char*, int*, float, fil_space_crypt_t*, unsigned char*) (row0merge.cc:2006)
|
==16217== by 0xC0FE172: row_merge_build_indexes(trx_t*, dict_table_t*, dict_table_t*, bool, dict_index_t**, unsigned long const*, unsigned long, TABLE*, dtuple_t const*, unsigned long const*, unsigned long, ib_sequence_t&) (row0merge.cc:4106)
|
==16217== by 0xC018D0E: ha_innodb::inplace_alter_table(TABLE*, Alter_inplace_info*) (handler0alter.cc:4249)
|
==16217== by 0x6E9918: handler::ha_inplace_alter_table(TABLE*, Alter_inplace_info*) (handler.h:3704)
|
==16217== by 0x6E1A77: mysql_inplace_alter_table(THD*, TABLE_LIST*, TABLE*, TABLE*, Alter_inplace_info*, enum_alter_inplace_result, MDL_request*, Alter_table_ctx*) (sql_table.cc:7149)
|
==16217== by 0x6E6322: mysql_alter_table(THD*, char*, char*, HA_CREATE_INFO*, TABLE_LIST*, Alter_info*, unsigned int, st_order*, bool) (sql_table.cc:8963)
|
==16217== by 0x75B98D: Sql_cmd_alter_table::execute(THD*) (sql_alter.cc:325)
|
==16217== Address 0x17343000 is in a rw- anonymous segment
|
^ Found warnings in /mnt/data/buildot/maria-slave/work-opensuse-amd64/build/mysql-test/var/4/log/mysqld.1.err
|