MDEV-12926 encryption.innodb_onlinealter_encryption, encryption.innodb-bad-key-change failed in buildbot with valgrind

row_merge_write(): Pass the correct (possibly encrypted) buffer
to os_file_write_int_fd().

This bug was introduced in commit 65e1399e64a306f1ce1d920e66206954f8630da8
which included a commit to merge changes from MySQL 5.6.36 to
MariaDB Server 10.0.